--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -12,8 +12,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-        with:
-          path: main
 
       - uses: actions/setup-node@v2
         with:
@@ -22,8 +20,11 @@ jobs:
       - name: pwd
         run: pwd
 
+      - name: ls
+        run: ls
+
       - name: read file
-        run: cat main/src/hello.js
+        run: cat src/hello.js
 
       - name: run hello.js
         run: node src/hello.js
